--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
@@ -17,7 +18,7 @@
                 </span>
             </button>
         </header>
-        <section class="weather-info">
+        <section class="weather-info" style="display: none">
             <div class="location-date-container">
                 <div class="location">
                     <span class="material-symbols-outlined">
@@ -34,6 +35,68 @@ location_on
                     <h1 class="temp-text">24 °C</h1>
                     <h3 class="condition-text regular-txt">Clouds</h3>
                 </div>
+            </div>
+            <div class="weather-conditions-container">
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                        water_drop
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Humidity</h5>
+                        <div class="humidity-value-txt">55%</div>
+                    </div>
+                </div>
+
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                        air
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Wind Speed</h5>
+                        <div class="wind-value-txt">13 Kmph</div>
+                    </div>
+                </div>
+            </div>
+            <div class="forecast-items-container">
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-text">27 Oct</h5>
+                    <img src="assets/weather/thunderstorm.svg"  class="forecast-item-img">
+                    <h5 class="forecast-item-temp">24 °C</h5>
+                </div>
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-text">27 Oct</h5>
+                    <img src="assets/weather/thunderstorm.svg"  class="forecast-item-img">
+                    <h5 class="forecast-item-temp">24 °C</h5>
+                </div>
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-text">27 Oct</h5>
+                    <img src="assets/weather/thunderstorm.svg"  class="forecast-item-img">
+                    <h5 class="forecast-item-temp">24 °C</h5>
+                </div>
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-text">27 Oct</h5>
+                    <img src="assets/weather/thunderstorm.svg"  class="forecast-item-img">
+                    <h5 class="forecast-item-temp">24 °C</h5>
+                </div>
+            </div>
+        </section>
+        <section class="search-city section-message">
+            <img src="assets/message/search-city.png">
+            <div>
+                <h1>Search City</h1>
+                <h4 class="regular-txt">
+                    Find out the Weather
+                </h4>
+            </div>
+        </section>
+
+        <section class="not-found section-message" style="display: none;">
+            <img src="assets/message/not-found.png">
+            <div>
+                <h1>Search City</h1>
+                <h4 class="regular-txt">
+                    Find out the Weather
+                </h4>
             </div>
         </section>
 
