added script with few css changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="material-symbols-outlined">
                      location_on
                     </span>
-                    <h4 class="county-txt">Rabat</h4>
+                    <h4 class="country-txt">Rabat</h4>
                 </div>
                 <h5 class="current-date-txt regular-txt">Sun, 27 Oct</h5>
             </div>
@@ -32,8 +32,8 @@
             <div class="weather-summary-container">
                 <img src="assets/weather/clouds.svg"  class="weather-summary-img">
                 <div class="weather-summary-info">
-                    <h1 class="temp-text">24 °C</h1>
-                    <h3 class="condition-text regular-txt">Clouds</h3>
+                    <h1 class="temp-txt">24 °C</h1>
+                    <h3 class="condition-txt regular-txt">Clouds</h3>
                 </div>
             </div>
             <div class="weather-conditions-container">
@@ -53,7 +53,7 @@
                     </span>
                     <div class="condition-info">
                         <h5 class="regular-txt">Wind Speed</h5>
-                        <div class="wind-value-txt">13 Kmph</div>
+                        <div class="wind-value-txt">3/ms</div>
                     </div>
                 </div>
             </div>
